--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,12 @@ asgiref==3.11.1
 charset-normalizer==3.4.4
 colorama==0.4.6
 Django==5.2.11
+gunicorn==25.1.0
+packaging==26.0
 pillow==12.1.1
 qrcode==8.2
 reportlab==4.4.10
 sqlparse==0.5.5
 typing_extensions==4.15.0
 tzdata==2025.3
+whitenoise==6.11.0
